--- a/index.html
+++ b/index.html
@@ -242,6 +242,8 @@
     <iframe width="320" height="180" src="https://www.youtube.com/embed/ভিডিও_আইডি" frameborder="0" allowfullscreen></iframe>
   </div>
 </section>
+
+  <section>
   <h2><b>Master Agent Service</b></h2>
   <style>
     
@@ -334,6 +336,7 @@
     </tr>
   </tbody>
 </table>
+  </section>
 
   <section id="promo-section">
     <h2>🎁 Get Your Bonus Now!</h2>
