--- a/index.html
+++ b/index.html
@@ -287,6 +287,7 @@
       justify-content: space-between;
       padding: 10px 15px;
       text-align: left;
+      position: relative;
       border: none;
       border-bottom: 1px solid #eee;
     }
