--- a/index.html
+++ b/index.html
@@ -186,6 +186,79 @@
         <a href="https://lb-aff.com/L?tag=d_1050501m_22611c_Oxy11&site=1050501&ad=22611&r=slots/game/105804/super-ace-deluxe" target="_blank">🏆Supar Ace</a>
       </div>
     </section>
+<h2 style="text-align:center; color:#FFA500; margin-top:40px;">📊 সাইট র‍্যাংকিং তালিকা</h2>
+
+<table class="ranking-table" style="width:100%; max-width: 800px; margin: 20px auto; border-collapse: collapse; font-family: Arial, sans-serif;">
+  <thead>
+    <tr style="background-color: #0e0e24; color: white;">
+      <th style="padding: 12px; border: 1px solid #444;">🏆 Rank</th>
+      <th style="padding: 12px; border: 1px solid #444;">🌐 Site Name</th>
+      <th style="padding: 12px; border: 1px solid #444;">⭐ Rating</th>
+      <th style="padding: 12px; border: 1px solid #444;">🎯 Category</th>
+      <th style="padding: 12px; border: 1px solid #444;">🔗 Visit</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr style="background-color: white; color: black;">
+      <td style="padding: 12px; border: 1px solid #ddd;">1</td>
+      <td style="padding: 12px; border: 1px solid #ddd;">1xBet</td>
+      <td style="padding: 12px; border: 1px solid #ddd;">9.8/10</td>
+      <td style="padding: 12px; border: 1px solid #ddd;">Sports & Casino</td>
+      <td style="padding: 12px; border: 1px solid #ddd;"><a href="https://1xbet24.netlify.app/" target="_blank" style="color:#007bff; font-weight:bold;">Visit</a></td>
+    </tr>
+    <tr style="background-color: #f9f9f9; color: black;">
+      <td style="padding: 12px; border: 1px solid #ddd;">2</td>
+      <td style="padding: 12px; border: 1px solid #ddd;">Linebet</td>
+      <td style="padding: 12px; border: 1px solid #ddd;">9.5/10</td>
+      <td style="padding: 12px; border: 1px solid #ddd;">Sports & Slots</td>
+      <td style="padding: 12px; border: 1px solid #ddd;"><a href="https://linebet-login.netlify.app/" target="_blank" style="color:#007bff; font-weight:bold;">Visit</a></td>
+    </tr>
+    <tr style="background-color: white; color: black;">
+      <td style="padding: 12px; border: 1px solid #ddd;">3</td>
+      <td style="padding: 12px; border: 1px solid #ddd;">Melbet</td>
+      <td style="padding: 12px; border: 1px solid #ddd;">9.2/10</td>
+      <td style="padding: 12px; border: 1px solid #ddd;">Casino</td>
+      <td style="padding: 12px; border: 1px solid #ddd;"><a href="https://melbet.com/" target="_blank" style="color:#007bff; font-weight:bold;">Visit</a></td>
+    </tr>
+  </tbody>
+</table>
+
+<style>
+  @media (max-width: 600px) {
+    .ranking-table thead {
+      display: none;
+    }
+    .ranking-table, .ranking-table tbody, .ranking-table tr, .ranking-table td {
+      display: block;
+      width: 100%;
+    }
+    .ranking-table tr {
+      margin-bottom: 15px;
+      background: white;
+      padding: 10px;
+      border-radius: 10px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    .ranking-table td {
+      padding-left: 50%;
+      position: relative;
+      text-align: left;
+      border: none;
+      border-bottom: 1px solid #eee;
+    }
+    .ranking-table td::before {
+      position: absolute;
+      top: 12px;
+      left: 15px;
+      width: 45%;
+      white-space: nowrap;
+      font-weight: bold;
+      content: attr(data-label);
+      color: #FFA500;
+    }
+  }
+</style>
+  
 
     <!-- Melbet Section -->
     <section class="brand-section" id="melbet">
