--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
           <td style="padding: 14px;">9.8 ⭐</td>
           <td style="padding: 14px;">Sports + Casino</td>
           <td style="padding: 14px;">
-            <a href="https://1xbet24.netlify.app/" target="_blank" style="padding: 8px 16px; background: #00FFAD; color: #000; border-radius: 25px; text-decoration: none; font-weight: bold;">Join Now</a>
+            <a href="https://1xbet24.netlify.app/" target="_blank" style="padding: 8px 16px; background: #00FFAD; color: #000; border-radius: 25px; text-decoration: none; font-weight: bold;">Join</a>
           </td>
         </tr>
         <tr style="border-bottom: 1px solid #333;">
@@ -215,7 +215,7 @@
           <td style="padding: 14px;">9.5 ⭐</td>
           <td style="padding: 14px;">Sports + Slots</td>
           <td style="padding: 14px;">
-            <a href="https://linebet-login.netlify.app/" target="_blank" style="padding: 8px 16px; background: #00FFAD; color: #000; border-radius: 25px; text-decoration: none; font-weight: bold;">Join Now</a>
+            <a href="https://linebet-login.netlify.app/" target="_blank" style="padding: 8px 16px; background: #00FFAD; color: #000; border-radius: 25px; text-decoration: none; font-weight: bold;">Join</a>
           </td>
         </tr>
         <tr>
@@ -224,7 +224,7 @@
           <td style="padding: 14px;">9.2 ⭐</td>
           <td style="padding: 14px;">Casino</td>
           <td style="padding: 14px;">
-            <a href="https://melbet.com/" target="_blank" style="padding: 8px 16px; background: #00FFAD; color: #000; border-radius: 25px; text-decoration: none; font-weight: bold;">Join Now</a>
+            <a href="https://melbet.com/" target="_blank" style="padding: 8px 16px; background: #00FFAD; color: #000; border-radius: 25px; text-decoration: none; font-weight: bold;">Join</a>
           </td>
         </tr>
       </tbody>
