--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
       </div>
     </section>
 <section style="padding: 40px 20px; background: #0e0e24; color: white; font-family: 'Segoe UI', sans-serif;">
-  <h1 style="text-align:center; color:#00FFAD; font-size:28px; margin-bottom:30px;">Ranking</h1>
+  <h1 style="text-align:center; color:#00FFAD; font-size:28px; margin-bottom:30px;">🎰Ranking🎰</h1>
   <div style="max-width: 900px; margin: auto; overflow-x: auto;">
     <table style="width: 100%; border-collapse: collapse; text-align: center; border-radius: 10px; overflow: hidden;">
       <thead style="background: linear-gradient(to right, #00c6ff, #0072ff); color: white;">
