--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
   <section id="how-to-register">
   <h2 style="text-align:center;">কিভাবে একাউন্ট খুলবেন</h2>
   <div style="text-align:center;">
-    <iframe width="320" height="180" src="https://www.youtube.com/embed/ভিডিও_আইডি" frameborder="0" allowfullscreen></iframe>
+    <iframe width="320" height="180" src="https://youtu.be/6-n_szx2XRE?si=x8l8ra0cnmcy026E" frameborder="0" allowfullscreen></iframe>
   </div>
 </section>
 
