--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
           <td style="padding: 14px;">9.2 ⭐</td>
           <td style="padding: 14px;">Casino</td>
           <td style="padding: 14px;">
-            <a href="https://melbet.com/" target="_blank" style="padding: 8px 16px; background: #00FFAD; color: #000; border-radius: 25px; text-decoration: none; font-weight: bold;">Join</a>
+            <a href="https://melbet6767.netlify.app/" target="_blank" style="padding: 8px 16px; background: #00FFAD; color: #000; border-radius: 25px; text-decoration: none; font-weight: bold;">Join</a>
           </td>
         </tr>
       </tbody>
@@ -285,7 +285,7 @@
   <section id="how-to-register">
   <h2 style="text-align:center;">কিভাবে একাউন্ট খুলবেন</h2>
   <div style="text-align:center;">
-    <iframe width="320" height="180" src="https://youtu.be/6-n_szx2XRE?si=x8l8ra0cnmcy026E" frameborder="0" allowfullscreen></iframe>
+    <iframe width="320" height="180" src="https://youtu.be/E4n-1jAj9NQ?si=5kbUU5l7UGOvtDxu" frameborder="0" allowfullscreen></iframe>
   </div>
 </section>
 
