--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <h2>নিচের বাটনে ক্লিক করুন</h2>
     <p>1xBet, Linebet, Melbet এ এখনই জয়েন করুন<br>
       প্রোমো কোড: <b>Oxy11</b> </p>
-    <p><b>crash/Super ace ক্লিক করুন ফ্রি খেলুন</b></p>
+    <p><b>Crash/Super ace ক্লিক করুন ফ্রি খেলুন</b></p>
     <div class="btn-group">
       <a href="https://lb-aff.com/L?tag=d_1050501m_22611c_Oxy11&site=1050501&ad=22611&r=games/crash" target="_blank" class="register-btn">🚀 Crash Game</a>
       <a href="https://lb-aff.com/L?tag=d_1050501m_22611c_Oxy11&site=1050501&ad=22611&r=slots/game/105804/super-ace-deluxe" target="_blank" class="register-btn">🎰 Super Ace</a>
@@ -159,7 +159,7 @@
       <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=registration?type=fast&bonus=SPORT" class="join-btn" target="_blank">1xbet Register</a>
        <!-- Promo Code Box -->
 <div class="promo-code-box">
-  <p>🔥 আজকের প্রমো কোড: <strong>Oxy11</strong></p>
+  <p>Promo Code: <strong>Oxy11</strong></p>
 </div>
       <div class="category-links">
         <a href="https://refpa58144.com/L?tag=d_905607m_1236c_promo&site=905607&ad=1236&r=games/crash" target="_blank">🚀Crash</a>
@@ -177,7 +177,7 @@
       <a href="https://bangladesh.bonus-linebet.com/oxy11" class="join-btn" target="_blank">Linebet Register</a>
        <!-- Promo Code Box -->
 <div class="promo-code-box">
-  <p>🔥 আজকের প্রমো কোড: <strong>Oxy11</strong></p>
+  <p> Promo Code: <strong>Oxy11</strong></p>
 </div>
       <div class="category-links">
         <a href="https://lb-aff.com/L?tag=d_1050501m_22611c_promo&site=1050501&ad=22611&r=slots/game/52358/aviator" target="_blank">🚀Aviator</a>
@@ -195,7 +195,6 @@
           <th style="padding: 14px;">Rank</th>
           <th style="padding: 14px;">Site</th>
           <th style="padding: 14px;">Rating</th>
-          <th style="padding: 14px;">Category</th>
           <th style="padding: 14px;">Join</th>
         </tr>
       </thead>
@@ -204,16 +203,14 @@
           <td style="padding: 14px;">1</td>
           <td style="padding: 14px;">1xBet</td>
           <td style="padding: 14px;">9.8 ⭐</td>
-          <td style="padding: 14px;">Sports + Casino</td>
           <td style="padding: 14px;">
-            <a href="https://1xbet24.netlify.app/" target="_blank" style="padding: 8px 16px; background: #00FFAD; color: #000; border-radius: 25px; text-decoration: none; font-weight: bold;">Join</a>
+            <a href="https://1xbet6767.netlify.app/" target="_blank" style="padding: 8px 16px; background: #00FFAD; color: #000; border-radius: 25px; text-decoration: none; font-weight: bold;">Join</a>
           </td>
         </tr>
         <tr style="border-bottom: 1px solid #333;">
           <td style="padding: 14px;">2</td>
           <td style="padding: 14px;">Linebet</td>
           <td style="padding: 14px;">9.5 ⭐</td>
-          <td style="padding: 14px;">Sports + Slots</td>
           <td style="padding: 14px;">
             <a href="https://linebet-login.netlify.app/" target="_blank" style="padding: 8px 16px; background: #00FFAD; color: #000; border-radius: 25px; text-decoration: none; font-weight: bold;">Join</a>
           </td>
@@ -222,7 +219,6 @@
           <td style="padding: 14px;">3</td>
           <td style="padding: 14px;">Melbet</td>
           <td style="padding: 14px;">9.2 ⭐</td>
-          <td style="padding: 14px;">Casino</td>
           <td style="padding: 14px;">
             <a href="https://melbet6767.netlify.app/" target="_blank" style="padding: 8px 16px; background: #00FFAD; color: #000; border-radius: 25px; text-decoration: none; font-weight: bold;">Join</a>
           </td>
@@ -240,7 +236,7 @@
       <a href="https://melbet6767.netlify.app/" class="join-btn" target="_blank">Melbet Register</a>
       <!-- Promo Code Box -->
 <div class="promo-code-box">
-  <p>🔥 আজকের প্রমো কোড: <strong>Oxy11</strong></p>
+  <p>Promo Code: <strong>Oxy11</strong></p>
 </div>
       <div class="category-links">
         <a href="https://melbet6767.netlify.app/" target="_blank">🏟️Sports</a>
@@ -256,7 +252,7 @@
       <a href="https://planbet.me/Oxy11" class="join-btn" target="_blank">Planbet Register</a>
       <!-- Promo Code Box -->
 <div class="promo-code-box">
-  <p>🔥 আজকের প্রমো কোড: <strong>Oxy11</strong></p>
+  <p> Promo Code: <strong>Oxy11</strong></p>
 </div>
       <div class="category-links">
         <a href="https://planbet.me/Oxy11" target="_blank">🏟️Sports</a>
