--- a/index.html
+++ b/index.html
@@ -147,6 +147,12 @@
 </body>
 </html>
 
+  
+<a href="https://whatsapp.com/channel/0029VbBYnPWJf05ctRZcFc2e" target="_blank" 
+   style="display:inline-block; padding:15px 30px; background:#25D366; color:#fff; 
+   font-weight:bold; font-size:18px; border-radius:8px; text-decoration:none; box-shadow: 0 4px 6px rgba(0,0,0,0.1); transition: background 0.3s ease;">
+   📲 Join WhatsApp Channel Now
+</a>
 
   <!------ses------->
 
