--- a/index.html
+++ b/index.html
@@ -233,6 +233,27 @@
     </table>
   </div>
 </section>
+  <!-- WhatsApp Floating Balloon -->
+<a href="https://wa.me/8801826444505?text=👋%20হ্যালো!%20আমাদের%201xBet%20অফিশিয়াল%20পেজে%20স্বাগতম%20🎲%0A👉%20রেজিস্ট্রেশন:%20https://1xbet24.netlify.app/%0A📌%20ফর্ম:%20https://forms.gle/4HMaphh3UQfMsaVp9%0A💬%20সাহায্যের%20জন্য%20মেসেজ%20করুন!"
+   target="_blank"
+   style="
+     position:fixed;
+     width:60px;
+     height:60px;
+     bottom:20px;
+     right:20px;
+     background-color:#25D366;
+     color:#fff;
+     border-radius:50px;
+     text-align:center;
+     font-size:30px;
+     box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
+     z-index:1000;">
+    <i style="margin-top:16px;" class="fa fa-whatsapp"></i>
+</a>
+
+<!-- Font Awesome Icon -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   
 
     <!-- Melbet Section -->
